# cqterrain

./: LICENSE  PACKAGE_README.md  README.md  changes.md  example_runner.py  glython_three.stl  material_stucco_brick_blocks.stl  pyproject.toml
documentation/: barrier.md  book.md  bridge.md  building.md  crystal.md  damage.md  documentation.md  door.md  floor.md  greeble.md  material.md  minibase.md  misc.md  pipe.md  roof.md  ruin.md  shieldwall.md  spool.md  stairs.md  swivel.md  tile.md  walkway.md  window.md
example/: board.py  building.py  buildingRough.py  buildingsExample.py  damage_blast.py  damage_blast_set.py  damage_blast_set_large.py  damage_blast_set_medium.py  deadzone_building.py  door.py  floor.py  floorExample.py  floorTile.py  floorTileExample.py  greeble_vent.py  ladder.py  obelisk.py  pipe_corrugated.py  roof.py  room.py  roomClass.py  room_with_tile.py  stairs.py  stones.py  support.py  tile_basketweave.py  tile_octagon_with_dots.py  tile_star.py  tile_windmill.py  wall.py  wallTile.py  window_lattice.py
example/barrier/: barrier.py  barrier_alt.py  barrier_greebled.py  barrier_magnet_template.py
example/blast/: damage_blast_set_large.py  damage_blast_set_medium.py
example/book/: book.py  book_random.py  bookcase.py  bookcase_class.py  books.py
example/bridge/: base_ramp.py  base_straight.py  bridge.py  tile_bridge.py  tile_straight.py
example/building/: Wall.py  (+10 more)
gltf/: crystal_wall.gltf  shieldwall_corner_connector.gltf  shieldwall_end_cap.gltf  shieldwall_straight_hex.gltf  tiles_plate.gltf
stl/: barrier.stl  barrier_alt.stl  barrier_alt_c.stl  barrier_alt_curve_60.stl  barrier_alt_diag_left.stl  barrier_alt_diag_right.stl  barrier_alt_taper.stl  barrier_c.stl  barrier_curve_60.stl  barrier_detailed.stl  barrier_diag_left.stl  barrier_diag_right.stl  barrier_magnet_template.stl  barrier_taper.stl  board_ex_full.stl  book.stl  book_bookcase.stl  book_bookcase_books.stl  book_books_pink.stl  book_random_blue.stl  book_random_green.stl  book_random_test.stl  bridge.stl  bridge_ramp.stl  bridge_straight.stl  bridge_tile_straight.stl  building.stl  building_Example.stl  building_floorTile.stl  building_room.stl  building_room_with_tile.stl  building_wall.stl  building_wall_tile.stl  building_with_roof.stl  buildingsExample.stl  crystal.stl  crystal_random.stl  crystal_wall.stl  crystal_wall_plate.stl  damage_blast_1.stl  (+177 more)
(+403 files in other folders)
