[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cqterrain"
version = "2.8.3"
authors = [
  { name="James Adams", email="inklink28@gmail.com" },
]
description = "Generate 3d models of buildings / terrain using CadQuery"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
'cadqueryhelper @ git+https://github.com/medicationforall/cadqueryhelper@1.4.2'
]


[project.urls]
"Homepage" = "https://github.com/medicationforall/cqterrain"
"Bug Tracker" = "https://github.com/medicationforall/cqterrain/issues"
