[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "3.7.2"
name = "cqterrain"
description = "Generate 3d models of buildings / terrain using CadQuery"

authors = [
  { name="James Adams", email="inklink28@gmail.com" },
]

readme = "README.md"
license = "Apache-2.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"
dependencies = [
'cadqueryhelper @ git+https://github.com/medicationforall/cadqueryhelper@2.1.2'
]


[project.urls]
"Homepage" = "https://github.com/medicationforall/cqterrain"
"Bug Tracker" = "https://github.com/medicationforall/cqterrain/issues"
